name:                free-prezen
version:             0.3.3.0
synopsis:            
description:         
license:             BSD3
license-file:        LICENSE
author:              Fujinami Hiroya
maintainer:          Fujinami Hiroya <alucky0707@gmail.com>
copyright:           Copyright (c) 2013, Fujinami Hiroya
category:            Graphics
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules:
    Graphics.UI.FreePrezen,
    Graphics.UI.FreePrezen.Runner,
    Graphics.UI.FreePrezen.Base
  build-depends:
    base ==4.6.*,
    free ==3.4.*,
    mtl ==2.1.*,
    free-game ==0.9.*,
    lens ==3.9.*,
    colors ==0.1.*,
    linear ==1.2.*,
    array ==0.4.*,
    data-default ==0.5.*